--- a/ClothingAppAngular/src/app/components/navigation/nav-block/nav-block.component.html
+++ b/ClothingAppAngular/src/app/components/navigation/nav-block/nav-block.component.html
@@ -3,6 +3,6 @@
   <ul class="navigation-ul">
     <li><a href="#" class="nav-link-home">Home</a></li>
     <li><a href="#" class="nav-link-categories">Categories</a></li>
-    <li><a href="/products" class="nav-link-products">Products</a></li>
+    <li><a routerLink="products" class="nav-link-products">Products</a></li>
   </ul>
 </nav>
