Updating product sell function

--- a/ClothingAppAngular/src/app/components/navigation/nav-block/nav-block.component.css
+++ b/ClothingAppAngular/src/app/components/navigation/nav-block/nav-block.component.css
@@ -31,3 +31,7 @@ label.logo{
     background-color: #e7b75d;
     text-decoration: underline;
 }
+.logo-a{
+    color: white;
+    text-decoration: none;
+}
