--- a/ClothingAppAngular/src/app/components/navigation/nav-block/nav-block.component.html
+++ b/ClothingAppAngular/src/app/components/navigation/nav-block/nav-block.component.html
@@ -1,7 +1,9 @@
 <nav class="navigation">
-  <label class="logo">ClothingMarket</label>
+  <label class="logo">
+    <a href="/" class="logo-a"> ClothingMarket </a>
+  </label>
   <ul class="navigation-ul">
-    <li><a href="#" class="nav-link-home">Home</a></li>
+    <li><a href="products/sell" class="nav-link-home">Sell Product</a></li>
     <li><a href="#" class="nav-link-categories">Categories</a></li>
     <li><a routerLink="products" class="nav-link-products">Products</a></li>
   </ul>
