--- a/ClothingAppAngular/src/app/components/navigation/nav-block/nav-block.component.html
+++ b/ClothingAppAngular/src/app/components/navigation/nav-block/nav-block.component.html
@@ -1,9 +1,11 @@
 <nav class="navigation">
   <label class="logo">
-    <a href="/" class="logo-a"> ClothingMarket </a>
+    <a routerLink="" class="logo-a"> ClothingMarket </a>
   </label>
   <ul class="navigation-ul">
-    <li><a href="products/sell" class="nav-link-home">Sell Product</a></li>
+    <li>
+      <a routerLink="products/sell" class="nav-link-home">Sell Product</a>
+    </li>
     <li><a href="#" class="nav-link-categories">Categories</a></li>
     <li><a routerLink="products" class="nav-link-products">Products</a></li>
   </ul>
