--- a/ClothingAppAngular/src/app/components/products/product-list/product-list.component.html
+++ b/ClothingAppAngular/src/app/components/products/product-list/product-list.component.html
@@ -4,7 +4,9 @@
     <img src="assets/img/example-img.jfif" alt="Clothes" />
     <p class="name">{{ product.name }}</p>
     <p class="price">${{ product.price }}</p>
+    <a [routerLink]="['product', product.id]">Buy</a>
   </div>
+  <div></div>
 </div>
 <p class="no-product-p" *ngIf="!products || products.length <= 0">
   No Products
