--- a/ClothingAppAngular/src/app/components/products/sell-product/sell-product.component.css
+++ b/ClothingAppAngular/src/app/components/products/sell-product/sell-product.component.css
@@ -71,7 +71,7 @@ button.sell{
     color: #fff;
     border: none;
     border-radius: 5px;
-    
+    cursor: pointer;
     background-color: rgb(120, 118, 250);
 }
 .button-div{
