--- a/ClothingAppAngular/src/app/components/products/product-list/product-list.component.css
+++ b/ClothingAppAngular/src/app/components/products/product-list/product-list.component.css
@@ -15,6 +15,7 @@ p{
 }
 .product-list .product-record-container{
     width: 23%;
+    height: 450%;
     min-width: 250px;
     padding: 10px 12px;
     border: 1px solid rgb(170, 170, 170);
@@ -33,13 +34,29 @@ p{
 }
 .product-record-container p.price{
     font-size: 1.4em;
-}
-.product-list a{
-    text-decoration: none;
-    color: black;
+    margin-bottom: 20px;
 }
 
 .product-list .product-record-container img{
-    width: 100%;
+    width: 80%;
     border-radius: 20px;
+}
+.buy-btn{
+    padding: 10px 30px;
+    font-family: sans-serif;
+    font-size: 18px;
+    font-weight: bold;
+    background: #1E90FF;
+    width: 100%;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #fff;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+.buy-btn:hover, .btn:focus, .btn:active{
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+    transform: scale(0.5);
 }
