--- a/ClothingAppAngular/src/app/components/products/product-list/product-list.component.html
+++ b/ClothingAppAngular/src/app/components/products/product-list/product-list.component.html
@@ -1,12 +1,12 @@
+<app-hero-section></app-hero-section>
 <h1 class="product-h1">Available Products</h1>
 <div class="product-list" *ngIf="products && products.length > 0">
   <div class="product-record-container" *ngFor="let product of products">
     <img src="assets/img/example-img.jfif" alt="Clothes" />
     <p class="name">{{ product.name }}</p>
     <p class="price">${{ product.price }}</p>
-    <a [routerLink]="['product', product.id]">Buy</a>
+    <a [routerLink]="['product', product.id]" class="buy-btn">Buy</a>
   </div>
-  <div></div>
 </div>
 <p class="no-product-p" *ngIf="!products || products.length <= 0">
   No Products
