--- a/ClothingAppAngular/src/app/components/hero-section/hero-section.component.html
+++ b/ClothingAppAngular/src/app/components/hero-section/hero-section.component.html
@@ -1,3 +1,3 @@
-<div class="banner bg-image bg-8">
-  <h1 class="bg-8">Buy. Sell. Clothes WOW</h1>
+<div class="banner bg-image d-flex justify-content-center">
+  <h1 class="display-1 ms-5">Buy. Sell. Clothes WOW</h1>
 </div>
