--- a/ClothingAppAngular/src/app/components/products/sell-product/sell-product.component.css
+++ b/ClothingAppAngular/src/app/components/products/sell-product/sell-product.component.css
@@ -1,81 +1,7 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-
-}
-.sell-container{
-    width: 100%;
-    display: flex;
-    height: 100vh;
-    justify-content: center;
-    align-items: center;
-    background-color: #faf5f5;
-    flex-direction: column;
-}
-
-h1{
-    font-size: 25px;
-    font-weight: bold;
-    position: relative;
-}
-h1::before{
-    content: '';
-    position: absolute;
-    height: 3px;
-    width: 50px;
-    left: 0;
-    bottom: 0;
-    background: rgb(61, 58, 240);
-}
-
 form{
-    max-width: 700px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    padding: 25px 30px;
-    background: wheat;
-    border-radius: 5px;
-    
+    max-width: 480px;
+    margin: auto;
 }
-label{
-    padding-top: 5px;
-    padding-bottom: 5px;
-    margin-top: 10px;
-    font-size: 20px;
-}
-input{
-    padding: 10px;
-    font-size: 17px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-}
-.dropdowns{
-    margin-top: 10px;
-}
-select{
-    width: 30%;
-    height: 30px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-}
-select option[disabled]{
-    color: grey;
-}
-button.sell{
-    width: 200px;
-    height: 50px;
-    font-size: 30px;
-    outline-color: none;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    background-color: rgb(120, 118, 250);
-}
-.button-div{
-    margin-top: 10px;
-    text-align: center;
-    width: 100%;
+.sell-div{
+    margin-top: 6vw;
 }
