product review functionality

--- a/ClothingAppAngular/src/app/components/products/detailed-product/detailed-product.component.html
+++ b/ClothingAppAngular/src/app/components/products/detailed-product/detailed-product.component.html
@@ -12,5 +12,5 @@
   <h4>Product Details</h4>
   <span>{{ productDetails.description }}</span>
 
-  <!-- <app-review-component [id]="productDetails"></app-review-component> -->
+  <app-review-component [id]="productDetails.id"></app-review-component>
 </div>
