--- a/ClothingAppAngular/src/app/components/products/product-list/product-list.component.html
+++ b/ClothingAppAngular/src/app/components/products/product-list/product-list.component.html
@@ -1,5 +1,6 @@
 <app-hero-section></app-hero-section>
 <h1 class="product-h1">Available Products</h1>
+<app-category-list></app-category-list>
 <div class="product-list" *ngIf="products && products.length > 0">
   <div class="product-record-container" *ngFor="let product of products">
     <img src="assets/img/example-img.jfif" alt="Clothes" />
