--- a/ClothingAppAngular/src/app/components/review-component/review-component.component.html
+++ b/ClothingAppAngular/src/app/components/review-component/review-component.component.html
@@ -1,12 +1,17 @@
-<form #form="ngForm" (ngSubmit)="addReviewAction()" class="review-form">
-  <p>Share your thoughts with other customers</p>
+<form
+  #form="ngForm"
+  (ngSubmit)="addReviewAction()"
+  class="review-form ms-5 me-5"
+>
+  <p class="mt-5 fs-1">Share your thoughts with other customers</p>
   <img src="" alt="" />
   <textarea
+    class="form-control fs-2"
     placeholder="Leave a review..."
     [(ngModel)]="review.content"
     name="review"
   ></textarea>
-  <label>Rating</label>
+  <label class="mt-3 fs-2">Rating</label>
   <input
     class="form-control fs-5"
     type="number"
@@ -17,12 +22,22 @@
     max="5"
   />
 
-  <button type="submit">Publish</button>
+  <button class="btn btn-primary btn-lg mt-3" type="submit">Publish</button>
 </form>
 
-<ul>
-  <li *ngFor="let review of reviews">
-    <h2>Anon</h2>
-    <p>review.content</p>
+<ul class="list-unstyled ms-5 me-5 mt-3">
+  <li *ngFor="let review of reviews" class="media mb-3">
+    <div class="media-body p-2 br-2">
+      <h5 class="mt-0 mb-1">Anon</h5>
+      <p class="mb-0">{{ review.content }}</p>
+      <button
+        class="btn btn-secondary btn-sm"
+        type="submit"
+        (click)="removeReview(review.id)"
+      >
+        Delete
+      </button>
+    </div>
+    <hr />
   </li>
 </ul>
